# zmux

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
docs/: reference.md
examples/: replay.rs
src/: agent.rs  agent_shim.rs  claude.rs  claude_hooks.rs  codex.rs  command.rs  config.rs  daemon.rs  dispatch.rs  events.rs  input.rs  interactive.rs  layout.rs  lib.rs  main.rs  mouse.rs  mux.rs  pane.rs  protocol.rs  pty.rs  scrollback.rs  session.rs  state_paths.rs  style.rs  supervisor.rs  terminal.rs  trace.rs  trace_tools.rs  tty.rs  windows.rs  workspace.rs  workspace_render.rs
src/mcp/: audit.rs  bridge_state.rs  dispatch.rs  execute.rs  mod.rs  protocol.rs  server.rs  stdio.rs
src/pair/: client.rs  conversation.rs  mod.rs  model.rs
tests/: agent_state.rs  daemon_integration.rs  input_fuzz.rs  layout_props.rs  mcp_server.rs  pair_integration.rs  vt_fuzz.rs  vt_regressions.rs  vt_render_regressions.rs
tests/support/: mod.rs
